added the container

--- a/index.html
+++ b/index.html
@@ -4,8 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Responsive-1</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;800&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="./style/design.css">
 </head>
 <body>
-    
+    <header>
+        <nav><small>404 not found</small></nav>
+    </header>
+    <main>
+        <div class="container">
+            <div class="container-left-site">
+                <img src="./image/Scarecrow.png" alt="" class="left-image">
+            </div>
+            <div class="container-right-site">
+                <h5 class="left-title">I have bad news <br> for you</h5>
+                <p class="left-description">The page you are looking <br> for might be removed or is <br>
+                    temporarily unavailable</p>
+                <button>Back to homepage</button>
+            </div>  
+        </div>
+    </main>
 </body>
-</html>
